--- a/SportsFeed/pom.xml
+++ b/SportsFeed/pom.xml
@@ -48,7 +48,11 @@
             <artifactId>kafka-clients</artifactId>
             <version>${kafka.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.typesafe</groupId>
+            <artifactId>config</artifactId>
+            <version>${typesafe.config.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
